# dm-foto-checker

./: .gitignore  README.md  check_orders.py  downloader.py  pyproject.toml
orders/: orders_template.csv
