[tool.poetry]
name = "dm-foto-checker"
version = "0.2.0"
description = "Check order statuses and automatically download digital photos from Fotoparadies / dm photo service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "check_orders.py"}, {include = "downloader.py"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
prettytable = "^3.9.0"

[tool.poetry.scripts]
check-orders = "check_orders:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
